[project]
name = "ha-arctic-spa"
version = "1.0.0"
description = "Arctic Spa integration for Home Assistant"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "BLE", "B", "A"]
